@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.82 2009-01-09 23:57:42 nicm Exp $
+# $Id: Makefile,v 1.83 2009-01-10 01:30:38 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -35,7 +35,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-show-window-options.c cmd-command-prompt.c cmd-set-buffer.c \
       cmd-show-buffer.c cmd-list-buffers.c cmd-delete-buffer.c \
       cmd-list-commands.c cmd-move-window.c cmd-select-prompt.c \
-      cmd-respawn-window.c cmd-source-file.c \
+      cmd-respawn-window.c cmd-source-file.c cmd-server-info.c \
       window-scroll.c window-more.c window-copy.c options.c paste.c \
       tty.c tty-term.c tty-keys.c tty-write.c colour.c utf8.c options-cmd.c
 
