@@ -1,3 +1,8 @@
+10 January 2009
+
+* New command, server-info, to show some server information and terminal
+  details.
+
 09 January 2009
 
 * Stop using ncurses variables and instead build a table of the codes we want
@@ -833,7 +838,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.185 2009-01-09 23:57:42 nicm Exp $
+$Id: CHANGES,v 1.186 2009-01-10 01:30:38 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB
